--- a/app/views/pokemons/new.html.erb
+++ b/app/views/pokemons/new.html.erb
@@ -1,8 +1,6 @@
-<%= simple_form_for @user do |f| %>
+<%= simple_form_for @poke do |f| %>
   <%= f.input :name %>
-  <%= f.collection_radio_buttons(
-    :ndex, (1..20).map {|ndex| [ndex, ndex]}, :first, :last
-  ) do |b| %>
+  <%= f.collection_radio_buttons(:ndex, (1..20).map {|ndex| [ndex, ndex]}, :first, :last) do |b| %>
   <div class="pokemon-choice-container">
     <%= b.label { image_tag("pokemon/#{b.text}.png") + b.radio_button } %>
   </div>
