--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -11,4 +11,7 @@
       <%= button_to "Damage!", damage_path(id: poke[:id]), :class => "button medium", :method => :patch %>
     <%end%>
   <%end%>
+  <%if @trainer == current_trainer%>
+    <%= button_to "Create New Pokemon!", new_path(), :class => "button medium", :method => :get %>
+  <%end%>
 </p>
